# Examen-Practicas-28Junio2022

./: CMakeLists.txt  README.md
src/: clase_racional.cc  clase_racional.h  racionales.cc
test/: test_racional.cc
